3/6/12 center ruler under cuvette
3/6/12 tweak size and velocity of photons, use image caching to improve performance
3/6/12 put a gray outline around the beam, so that lighter colors are still visible
3/6/12 add ruler insets to model, start with ruler aligned with left edge of cuvette
3/6/12 change label "% Transmittance" to "Transmittance" on detector
3/5/12 first pass at photon beam (model and view), does not interact with solution or detector
3/5/12 rename Beam to SolidBeam
3/2/12 Beers: make solutions more transparent so that it's easier to see probe inside solution
3/2/12 setPickable(false) on cuvette components, so that probe can be manipulated when it's inside the cuvette
3/2/12 make entire probe look like it's passing through the cuvette
# 0.00.15 (62131) Mar 2, 2012
3/2/12 first pass at making probe look like it's passing through the cuvette (half in, half out)
3/2/12 sim-sharing: add non-interactive message for detector body
3/2/12 sim-sharing: indicate whether probe is in beam when dragging probe
3/2/12 Beers: add transparency to solution in cuvette, so that detector will be visible as it passes through
3/2/12 move probe/beam intersection tests to beam model
3/2/12 Beers: make detector work inside cuvette
3/2/12 factor out model classes for A and T
3/2/12 use transmittance (T) in model, convert to percent transmittance (%T) in view
3/2/12 bug fix: concentration slider doesn't show correct initial non-zero value
3/1/12 Beers: make AT detector non movable
3/1/12 Beers: start with 100 units of concentration for each solution
3/1/12 static methods for A and %T models
3/1/12 make sensor diameter an attribute of the detector probe
# 0.00.14 (62016) Feb 29, 2012
2/28/12 add stub for photon view
2/28/12 add clock to Beers model, in preparation for animating photons
2/28/12 move LightRepresentation property to view
2/28/12 fix rendering order so that behavior looks plausible when probe is close to light